@@ -1,6 +1,6 @@
 // copy-relocs.cc -- handle COPY relocations for gold.
 
-// Copyright 2006, 2007, 2008 Free Software Foundation, Inc.
+// Copyright 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 // Written by Ian Lance Taylor <iant@google.com>.
 
 // This file is part of gold.
@@ -131,6 +131,9 @@ Copy_relocs<sh_type, size, big_endian>::emit_copy_reloc(
   typename Sized_symbol<size>::Value_type value = sym->value();
   while ((value & (addralign - 1)) != 0)
     addralign >>= 1;
+
+  // Mark the dynamic object as needed for the --as-needed option.
+  sym->object()->set_is_needed();
 
   if (this->dynbss_ == NULL)
     {
